--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,11 +8,12 @@
 }
 
 #playlist {
-  position: absolute;
   width: 22.375rem;
   height: 9.0625rem;
-  right: 11vw;
-  margin-top: 20.5vh;
+  margin-right: 8.2vw;
+  margin-top: 23.75vh;
+  padding-right: 12px;
+  padding-left: 12px;
   background: #F6CB58;
   box-shadow: inset 0px 4px 4px rgba(214, 164, 30, 0.25), inset 0px -4px 4px #D6A41E;
   border-radius: 10px;
@@ -33,10 +34,11 @@
 
 #playcircle {
   position: relative;
-  width: 5rem;
-  height: 3.8rem;
+  width: 4.8125rem;
+  height: 4.8125rem;
   box-sizing: content-box;
-  right: 1.5rem;
+  right: 1.8rem;
+  top: 0.4rem;
   background-image: url("../../assets/img/play-circle.svg");
   background-repeat: no-repeat;
   background-color: transparent;
@@ -46,9 +48,9 @@
 header {
   display: flex;
   justify-content: flex-end;
-  margin-top: 7vh !important;
-  margin-right: 10vw!important;
-  margin-left: 10vw!important;
+  margin-top: 12vh;
+  margin-right: 9.25vw;
+  margin-left: 9.25vw;
 }
 
 #add-song-button {
@@ -114,23 +116,23 @@ li a:hover {
 
 input[type=range][orient=vertical] {
   appearance: slider-vertical;
-  width: 6px;
-  height: 67px;
+  width: 0.375rem;
+  height: 4.375rem;
   margin-left: .8125rem;
 }
 
 #current-song-name {
   margin: 0;
   padding: 0;
-  margin-left: -1rem;
-  margin-right: 1rem;
+  margin-left: -2rem;
+  margin-right: 1.5rem;
   font-family: Gilroy;
   font-style: normal;
   font-weight: normal;
   font-size: 1.5rem;
   line-height: 1.75rem;
   color: #FFFFFF;
-  text-size-adjust: 80%;
+  text-size-adjust: 75%;
 }
 
 #play-section {
@@ -138,8 +140,8 @@ input[type=range][orient=vertical] {
   flex-direction: row;
   justify-content: flex-end;
   position: absolute;
-  right: 11vw;
-  margin-top: 5vh;
+  right: 8.1vw;
+  margin-top: 3.151875rem;
 }
 
 #main-page {
@@ -159,17 +161,17 @@ input[type=range][orient=vertical] {
 
 #headphones-img {
   position: relative;
-  right: 0.5rem;
+  right: 1.125rem;
+  bottom: 0.125rem;
   width: 2.75rem;
-  height: auto;
-  max-height: 2.75rem;
+  height: 2.75rem;
 }
 
 #history-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 12px;
+  padding-top: 12px;
 }
 
 #history-header p {
