--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,12 +8,11 @@
 }
 
 #playlist {
-  width: 22.375rem;
-  height: 9.0625rem;
-  margin-right: 8.2vw;
-  margin-top: 23.75vh;
-  padding-right: 12px;
-  padding-left: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  max-width: 22.375rem;
+  height: max-content;
   background: #F6CB58;
   box-shadow: inset 0px 4px 4px rgba(214, 164, 30, 0.25), inset 0px -4px 4px #D6A41E;
   border-radius: 10px;
@@ -70,9 +69,8 @@ header {
 }
 
 #song-list {
-  position: absolute;
-  width: 291px;
-  height: 88px;
+  width: fit-content;
+  height: max-content;
   font-family: Gilroy;
   font-style: normal;
   font-weight: normal;
@@ -94,6 +92,12 @@ li a:hover {
   color: #909090;
 }
 
+#footer-img {
+  padding-top: 1.375rem;
+  padding-left: 40%;
+  padding-right: 40%;
+}
+
 #footer-link {
   font-family: Gilroy;
   font-style: normal;
@@ -103,6 +107,8 @@ li a:hover {
   text-align: center;
   text-decoration-line: underline;
   color: #FFFFFF;
+  margin-top: 1.28125rem;
+  margin-bottom: 1.375rem;
 }
 
 .footer-basic {
@@ -115,7 +121,7 @@ li a:hover {
 }
 
 input[type=range][orient=vertical] {
-  appearance: slider-vertical;
+  -webkit-appearance: slider-vertical;
   width: 0.375rem;
   height: 4.375rem;
   margin-left: .8125rem;
@@ -136,12 +142,12 @@ input[type=range][orient=vertical] {
 }
 
 #play-section {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   justify-content: flex-end;
   position: absolute;
   right: 8.1vw;
-  margin-top: 3.151875rem;
+  margin-top: 3.151875rem; */
 }
 
 #main-page {
@@ -192,11 +198,76 @@ input[type=range][orient=vertical] {
   justify-content: space-between;
 }
 
-#history-button:hover {
-  opacity: 1;
-}
+#history-button:hover {opacity: 1;}
 
-#add-song-button:hover {
-  opacity: 1;
-}
+#add-song-button:hover {opacity: 1;}
 
+@media (max-width: 768px) {
+
+  #main-page {
+    display: grid;
+    grid-template-columns: 28px 19px 23px auto 23px 19px 33px;
+    grid-template-rows: 43.4px 33.48px 26.12px 62px 17px 79px;
+  }
+
+  header {
+    display: grid;
+    grid-column: 3/6;
+    grid-row: 2/3;
+
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  #play-section {
+    display: grid;
+    grid-template-areas: "a b";
+    grid-column: 2/7;
+    grid-row: 4/5;
+    height: auto;
+    width: auto;
+    /* margin-top: 1.6325rem;
+    justify-content: center;
+    right: 0;
+    min-width: 100%;
+    margin-left: 28px; */
+  }
+
+  #current-song-box {width: auto;}
+
+  #playcircle {
+    width: 4rem;
+    height: 4rem;
+    top: 0;
+  }
+
+  #current-song-name {
+    font-size: 1.075rem;
+    line-height: 1rem;
+    width: 60%;
+    margin-left: -1.9rem;
+    margin-right: 1.5rem;
+  }
+
+  #playlist {
+    display: grid;
+    grid-column: 2/7;
+    grid-row: 6/7;
+    width: fit-content;
+    /* margin-top: 7rem;
+    margin-left: auto;
+    margin-right: auto; */
+    /* margin-inline: 43px; */
+    /* width: 266px; */
+  }
+
+  #song-list li:not(:first-child){
+    display: none;
+  }
+
+  #footer-img {
+    padding-left: 30%;
+    padding-right: 30%;
+  }
+}
