--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,8 +2,6 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
 /************************************************/
@@ -52,8 +50,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-shrink: 1;
-  width: 20.375rem;
+  max-width: 20.375rem;
   height: 4.375rem;
   background: #F6CB58;
   box-shadow: inset 0px 4px 4px rgba(214, 164, 30, 0.25), inset 0px -4px 4px #D6A41E;
@@ -264,9 +261,9 @@ header {
   }
 
   #current-song-name {
+    width: 60%;
     font-size: 1.3rem;
     line-height: 1.2rem;
-    width: 60%;
     margin-left: -1.9rem;
     margin-right: 1.5rem;
   }
@@ -290,18 +287,18 @@ header {
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   #main-page {
     grid-template-columns: 14px 9.5px 11.5px auto 11.5px 9.5px 16.5px;
   }
 
   #current-song-name {
-    font-size: 6vw;
-    line-height: 6vw;
-    margin-right: 1rem;
+    font-size: 6vw !important;
+    line-height: 6vw !important;
+    margin-right: 1rem !important;
   }
 
   #song-list {
-    font-size: 7vw;
+    font-size: 7vw !important;
   }
 }
