--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,9 +6,9 @@
 
 @font-face {
   font-family: Gilroy;
-  src: url("../font/Gilroy-Regular.ttf") format("ttf"),
-       url("../font/Gilroy-Regular.woff") format("woff"),
-       url("../font/Gilroy-Regular.eot") format("eot");
+  src: url("../fonts/Gilroy-Regular.ttf") format("ttf"),
+       url("../fonts/Gilroy-Regular.woff") format("woff"),
+       url("../fonts/Gilroy-Regular.eot") format("eot");
   font-display: swap;
 }
 
@@ -21,7 +21,13 @@
   height: 100vh;
   width: auto;
   resize: initial;
-  background: url("../../assets/img/back.jpg");
+  background-color: #f8d053;
+
+  /*background-image: url(../../assets/img/back.jpg);*/
+  /*background-size: cover;*/
+  /*background-position-y: 15vh;*/
+  /*background-position-x: -75vw;*/
+  /*background-repeat: no-repeat;*/
 }
 
 header {
@@ -64,7 +70,7 @@ header {
   border-radius: 10px;
 }
 
-#play-section input[type=range][orient=vertical] {
+#play-section #sound-volume {
   -webkit-appearance: slider-vertical;
   width: 0.375rem;
   height: 4.375rem;
@@ -88,9 +94,10 @@ header {
   text-decoration-line: underline;
   color: #FFFFFF;
 }
-
 #play-section #add-song-link:hover {color: #9303aa;}
 
+/* TODO: add play/pause animations */
+/* TODO: add user-encouraging-to-press play button animation */
 #play-section #current-song-box #play-btn {
   position: relative;
   width: 4.8125rem;
@@ -98,10 +105,15 @@ header {
   box-sizing: content-box;
   right: 1.8rem;
   top: 0.4rem;
-  background-image: url("../../assets/img/play-circle.svg");
   background-repeat: no-repeat;
   background-color: transparent;
   border-color: transparent;
+}
+#play-section #current-song-box #play-btn[data-state="paused"] {
+  background-image: url("../../assets/img/play.svg");
+}
+#play-section #current-song-box #play-btn[data-state="plays"] {
+  background-image: url("../../assets/img/stop.svg");
 }
 
 #play-section #current-song-box #current-song-name {
@@ -254,6 +266,7 @@ header {
     display: grid;
     grid-template-columns: 1.75rem 1.1875rem 1.4375rem auto 1.4375rem 1.1875rem 2.0625rem;
     grid-template-rows: 2.6875rem 10vw 1.625rem 3.875rem 1.125rem 5rem;
+    background-color: #f4c14e;
   }
 
   header {
@@ -309,9 +322,7 @@ header {
 
   #history-button {visibility: visible !important;}
 
-  #song-list li:not(:first-child){
-    display: none;
-  }
+  #song-list li:not(:first-child){display: none;}
 
   #footer-img {
     padding-left: 30%;
@@ -330,22 +341,16 @@ header {
     margin-right: 1rem !important;
   }
 
-  #song-list {
-    font-size: 7vw !important;
-  }
+  #song-list {font-size: 7vw !important;}
 }
 
 @media only screen and (max-width: 350px) {
-  #play-btn {
-    transform: scale(0.8);
-  }
+  #play-btn {transform: scale(0.8);}
 
-  #play-section input[type=range][orient=vertical] {
-    margin-left: 0.4375rem;
-  }
+  #play-section #sound-volume {margin-left: 0.4375rem;}
 
   #current-song-name {
-    /*font-size: 5.25vw !important;*/
+    /*fonts-size: 5.25vw !important;*/
     line-height: 7vw !important;
     margin-right: 1rem !important;
   }
